# pydeployment

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build_pydeployment.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_mkdocs.txt  requirements_pytest.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-pr.yml  ci-publish.yml  ci-windows.yml  ci.yml  main.yml  pr.yml  publish.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  index.md  license.md
docs/about/: contributing.md  license.md  release-notes.md
docs/user-guide/: README.md  build-options.md  getting-started.md
docs/user-guide/advanced/: README.md  archive-file.md  custom-appimagetool.md  custom-makensis.md  custom-nsis.md  custom-venv.md  github-workflows.md  macos-notarization.md  passing-args-to-pyi.md
docs/user-guide/setting-options/: README.md  command-line.md  env-file.md  using-both.md
licenses/: LICENSE_AppImageKit  LICENSE_NSISPortable  LICENSE_pynsist
src/pydeployment/: __init__.py  __main__.py  arg_parser.py  build.py  build_config.py  build_linux.py  build_macos.py  build_windows.py  logger.py
src/pydeployment/linux/appimagetool/: runtime-aarch64  runtime-armhf  (+2 more)
src/pydeployment/macos/: default.icns
src/pydeployment/windows/: build.nsi
tests/: __init__.py  conftest.py  test_arg_parser.py  test_build.py  test_build_config.py  test_build_linux.py  test_build_macos.py  test_build_windows.py  test_logger.py  test_main.py  test_utils.py
(+79 files in other folders)
